[tool.poetry]
name = "dash-test-app"
version = "0.1.0"
description = "A testing ground for Dash app development including app features and experimenting with dashboard visualizations."
authors = ["Chris Peterson <cdpeters1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
dash = "^2.7.0"
ibis-framework = { version = "^3.2.0", python = ">=3.10,<3.11" }
sqlalchemy = "^1.4.44"
dash-bootstrap-components = "^1.2.1"
dash-bootstrap-templates = "^1.0.7"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
ipykernel = "^6.18.0"
jupyterlab = "^3.5.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
interrogate = "^1.5.0"
flake8-docstrings = "^1.6.0"
mypy = "^0.991"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.interrogate]
ignore-init-module = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
